tests/ui/specialization/const_trait_impl.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:34:9
   |
LL | impl<T: ~const Default> const A for T {
   |         ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:40:9
   |
LL | impl<T: ~const Default + ~const Sup> const A for T {
   |         ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:46:9
   |
LL | impl<T: ~const Default + ~const Sub> const A for T {
   |         ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:40:9
   |
LL | impl<T: ~const Default + ~const Sup> const A for T {
   |         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:34:9
   |
LL | impl<T: ~const Default> const A for T {
   |         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const_trait_impl.rs:46:9
   |
LL | impl<T: ~const Default + ~const Sub> const A for T {
   |         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors

